# QuarmAnnounce

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  named-pipes-notes.md
plans/: 2025-11-07_async-audio.md  2025-11-13_github-actions-release-prd.md  2025-11-13_github-actions-release-tasks-prescriptive.md  2025-11-13_github-actions-release-tasks.md
resources/: default-config.json
scripts/: download-speakers.sh
src/: audio.rs  config.rs  log_monitor.rs  main.rs
