[package]
name = "quarm_announce"
version = "0.1.0"
edition = "2024"

[dependencies]
piper-rs = "0.1.9"
ort = { version = "=2.0.0-rc.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
rodio = "0.21.1"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
