[package]
name = "quarm_announce"
version = "0.1.3"
edition = "2024"

[dependencies]
piper-rs = "0.1.9"
ort = { version = "=2.0.0-rc.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
tokio = { version = "1.42", default-features = false, features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
anyhow = "1.0"
